# DirectXTex-rs

./: Cargo.toml  README.md  cranky.toml  todo.md
.cargo/: config.toml  nextest.toml
src/: cwide.rs  error.rs  error_compat.rs  flags.rs  hwaccel.rs  image.rs  io.rs  lib.rs  ops.rs  scratch.rs  types.rs  util.rs
src/formats/: dds.rs  exr.rs  hdr.rs  mod.rs  tga.rs  wic.rs
src/io/: cwide.rs  dds.rs  exr.rs  hdr.rs  tga.rs  wic.rs
sys/: Cargo.toml  build.rs
sys/src/: impls.rs  lib.rs  types.rs
sys/tests/: blob.rs  credits.txt  dds.rs  functions.rs  gentest.rs  operations.rs  test_complex.dds  tga.rs  wic.rs
sys/tests/backups/: test.dds  test.exr  test.hdr  test.tga  test_1d.dds
sys/tests/common/: mod.rs
sys/wrapper/: DirectXTexWrapper.cpp  DirectXTexWrapper.hpp
tests/: tests.rs
