[workspace]
members = ["sys"]

[workspace.package]
version = "0.1.0"
authors = ["mona"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/monax3/DirectXTex-rs"
categories = ["graphics", "game-development", "external-ffi-bindings"]
keywords = ["directxtex", "dxt", "textures", "bc1", "bc3", "bc5", "bc6", "bc7"]

[workspace.dependencies]
windows = "0.43.0"

[package]
name = "directxtex"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
directxtex-sys = { path = "sys" }
once_cell = { version = "1.15.0", optional = true }
windows = { workspace = true, optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D11",
] }

[dev-dependencies]
windows = { workspace = true, features = ["Win32_Graphics_Dxgi_Common"] }

[features]
windows = ["dep:windows", "directxtex-sys/windows"]
hwaccel = [
    "windows",
    "dep:once_cell",
    "windows/Win32_Graphics_Dxgi",
    "windows/Win32_Graphics_Direct3D",
]
default = ["hwaccel"]
