[package]
name = "directxtex-sys"
description = "Dynamically generated (bindgen) bindings to Microsoft's DirectXTex library via vcpkg"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
windows = { workspace = true, optional = true, features = [
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Imaging",
]}

[build-dependencies]
vcpkg = { version = "0.2.15", default-features = false }
cc = "1"
bindgen = { version = "0.60.1", default-features = false }

[dev-dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
]}
tempfile = "3"
